Notebook -  Rework Checklist and Table database - Fix BE tests