@@ -4,19 +4,23 @@ import com.github.saphyra.apphub.integration.action.backend.IndexPageActions;
 import com.github.saphyra.apphub.integration.action.backend.NotebookActions;
 import com.github.saphyra.apphub.integration.core.BackEndTest;
 import com.github.saphyra.apphub.integration.framework.ErrorCode;
+import com.github.saphyra.apphub.integration.framework.ResponseValidator;
 import com.github.saphyra.apphub.integration.structure.api.notebook.CategoryTreeView;
+import com.github.saphyra.apphub.integration.structure.api.notebook.ColumnType;
 import com.github.saphyra.apphub.integration.structure.api.notebook.CreateTableRequest;
 import com.github.saphyra.apphub.integration.structure.api.notebook.CreateTextRequest;
-import com.github.saphyra.apphub.integration.structure.api.notebook.EditTableHeadRequest;
-import com.github.saphyra.apphub.integration.structure.api.notebook.EditTableJoinRequest;
 import com.github.saphyra.apphub.integration.structure.api.notebook.EditTableRequest;
+import com.github.saphyra.apphub.integration.structure.api.notebook.ItemType;
+import com.github.saphyra.apphub.integration.structure.api.notebook.ListItemType;
+import com.github.saphyra.apphub.integration.structure.api.notebook.NotebookView;
+import com.github.saphyra.apphub.integration.structure.api.notebook.TableColumnModel;
+import com.github.saphyra.apphub.integration.structure.api.notebook.TableHeadModel;
 import com.github.saphyra.apphub.integration.structure.api.notebook.TableResponse;
+import com.github.saphyra.apphub.integration.structure.api.notebook.TableRowModel;
 import com.github.saphyra.apphub.integration.structure.api.user.RegistrationParameters;
 import io.restassured.response.Response;
-import org.testng.annotations.Ignore;
 import org.testng.annotations.Test;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
@@ -26,16 +30,16 @@ import static com.github.saphyra.apphub.integration.framework.ResponseValidator.
 import static com.github.saphyra.apphub.integration.framework.ResponseValidator.verifyListItemNotFound;
 import static org.assertj.core.api.Assertions.assertThat;
 
-@Ignore //TODO restore when new API was implemented
+//TODO split methods
 public class TableCrudTest extends BackEndTest {
     private static final String COLUMN_NAME = "column-name";
     private static final String COLUMN_VALUE = "column-value";
-    private static final String TITLE = "title";
+    private static final String TABLE_TITLE = "table-title";
     private static final String NEW_COLUMN_NAME = "new-column-name";
     private static final String NEW_COLUMN_VALUE = "new-column-value";
     private static final String NEW_TITLE = "new-title";
 
-    @Test
+    @Test(groups = {"be", "notebook"})
     public void tableCrud() {
         RegistrationParameters userData = RegistrationParameters.validParameters();
         UUID accessTokenId = IndexPageActions.registerAndLogin(userData);
@@ -43,76 +47,203 @@ public class TableCrudTest extends BackEndTest {
         //Create - Blank title
         CreateTableRequest create_blankTitleRequest = CreateTableRequest.builder()
             .title(" ")
-            .columnNames(Arrays.asList(COLUMN_NAME))
-            .columns(Arrays.asList(Arrays.asList(COLUMN_VALUE)))
+            .listItemType(ListItemType.TABLE)
+            .tableHeads(List.of(TableHeadModel.builder()
+                .columnIndex(0)
+                .content(COLUMN_NAME)
+                .build()))
+            .rows(List.of(TableRowModel.builder()
+                .rowIndex(0)
+                .columns(List.of(TableColumnModel.builder()
+                    .columnIndex(0)
+                    .columnType(ColumnType.TEXT)
+                    .data(COLUMN_VALUE)
+                    .build()))
+                .build()))
             .build();
         Response create_blankTitleResponse = NotebookActions.getCreateTableResponse(accessTokenId, create_blankTitleRequest);
         verifyInvalidParam(create_blankTitleResponse, "title", "must not be null or blank");
 
+        //Create - Null ListItemType
+        CreateTableRequest create_nullListItemTypeRequest = CreateTableRequest.builder()
+            .title(TABLE_TITLE)
+            .listItemType(null)
+            .tableHeads(List.of(TableHeadModel.builder()
+                .columnIndex(0)
+                .content(COLUMN_NAME)
+                .build()))
+            .rows(List.of(TableRowModel.builder()
+                .rowIndex(0)
+                .columns(List.of(TableColumnModel.builder()
+                    .columnIndex(0)
+                    .columnType(ColumnType.TEXT)
+                    .data(COLUMN_VALUE)
+                    .build()))
+                .build()))
+            .build();
+        Response create_nullListItemTypeResponse = NotebookActions.getCreateTableResponse(accessTokenId, create_nullListItemTypeRequest);
+        verifyInvalidParam(create_nullListItemTypeResponse, "listItemType", "must not be null");
+
         //Create - Parent not found
         CreateTableRequest create_parentNotFoundRequest = CreateTableRequest.builder()
-            .title(TITLE)
+            .title(TABLE_TITLE)
+            .listItemType(ListItemType.TABLE)
             .parent(UUID.randomUUID())
-            .columnNames(Arrays.asList(COLUMN_NAME))
-            .columns(Arrays.asList(Arrays.asList(COLUMN_VALUE)))
+            .tableHeads(List.of(TableHeadModel.builder()
+                .columnIndex(0)
+                .content(COLUMN_NAME)
+                .build()))
+            .rows(List.of(TableRowModel.builder()
+                .rowIndex(0)
+                .columns(List.of(TableColumnModel.builder()
+                    .columnIndex(0)
+                    .columnType(ColumnType.TEXT)
+                    .data(COLUMN_VALUE)
+                    .build()))
+                .build()))
             .build();
         Response create_parentNotFoundResponse = NotebookActions.getCreateTableResponse(accessTokenId, create_parentNotFoundRequest);
         verifyErrorResponse(create_parentNotFoundResponse, 404, ErrorCode.CATEGORY_NOT_FOUND);
 
         //Create - Parent not category
-        UUID notCategoryParentId = NotebookActions.createText(accessTokenId, CreateTextRequest.builder().title(TITLE).content("").build());
+        UUID notCategoryParentId = NotebookActions.createText(accessTokenId, CreateTextRequest.builder().title("title").content("").build());
         CreateTableRequest create_parentNotCategoryRequest = CreateTableRequest.builder()
-            .title(TITLE)
+            .title(TABLE_TITLE)
+            .listItemType(ListItemType.TABLE)
             .parent(notCategoryParentId)
-            .columnNames(Arrays.asList(COLUMN_NAME))
-            .columns(Arrays.asList(Arrays.asList(COLUMN_VALUE)))
+            .tableHeads(List.of(TableHeadModel.builder()
+                .columnIndex(0)
+                .content(COLUMN_NAME)
+                .build()))
+            .rows(List.of(TableRowModel.builder()
+                .rowIndex(0)
+                .columns(List.of(TableColumnModel.builder()
+                    .columnIndex(0)
+                    .columnType(ColumnType.TEXT)
+                    .data(COLUMN_VALUE)
+                    .build()))
+                .build()))
             .build();
         Response create_parentNotCategoryResponse = NotebookActions.getCreateTableResponse(accessTokenId, create_parentNotCategoryRequest);
         verifyErrorResponse(create_parentNotCategoryResponse, 422, ErrorCode.INVALID_TYPE);
 
         //Create - Blank column name
         CreateTableRequest create_blankColumnNameRequest = CreateTableRequest.builder()
-            .title(TITLE)
-            .columnNames(Arrays.asList(" "))
-            .columns(Arrays.asList(Arrays.asList(COLUMN_VALUE)))
+            .title(TABLE_TITLE)
+            .listItemType(ListItemType.TABLE)
+            .tableHeads(List.of(TableHeadModel.builder()
+                .columnIndex(0)
+                .content(" ")
+                .build()))
+            .rows(List.of(TableRowModel.builder()
+                .rowIndex(0)
+                .columns(List.of(TableColumnModel.builder()
+                    .columnIndex(0)
+                    .columnType(ColumnType.TEXT)
+                    .data(COLUMN_VALUE)
+                    .build()))
+                .build()))
             .build();
         Response create_blankColumnNameResponse = NotebookActions.getCreateTableResponse(accessTokenId, create_blankColumnNameRequest);
-        verifyInvalidParam(create_blankColumnNameResponse, "columnName", "must not be null or blank");
+        verifyInvalidParam(create_blankColumnNameResponse, "tableHead.content", "must not be null or blank");
+
+        //Create - null rows
+        //TODO
+
+        //Create - null rowIndex
+        //TODO
+
+        //Create - null columns
+        //TODO
 
         //Create - Incorrect column amount
         CreateTableRequest create_incorrectColumnAmountRequest = CreateTableRequest.builder()
-            .title(TITLE)
-            .columnNames(Arrays.asList(COLUMN_NAME))
-            .columns(Arrays.asList(Arrays.asList(COLUMN_VALUE, COLUMN_VALUE)))
+            .title(TABLE_TITLE)
+            .listItemType(ListItemType.TABLE)
+            .tableHeads(List.of(TableHeadModel.builder()
+                .columnIndex(0)
+                .content(COLUMN_NAME)
+                .build()))
+            .rows(List.of(TableRowModel.builder()
+                .rowIndex(0)
+                .columns(List.of(
+                    TableColumnModel.builder()
+                        .columnIndex(0)
+                        .columnType(ColumnType.TEXT)
+                        .data(COLUMN_VALUE)
+                        .build(),
+                    TableColumnModel.builder()
+                        .columnIndex(1)
+                        .columnType(ColumnType.TEXT)
+                        .data(COLUMN_VALUE)
+                        .build()
+                ))
+                .build()))
             .build();
         Response create_incorrectColumnAmountResponse = NotebookActions.getCreateTableResponse(accessTokenId, create_incorrectColumnAmountRequest);
-        verifyInvalidParam(create_incorrectColumnAmountResponse, "columns", "amount different");
+        verifyInvalidParam(create_incorrectColumnAmountResponse, "row.columns", "item count mismatch");
 
         //Create - Null column value
         CreateTableRequest create_nullColumnValueRequest = CreateTableRequest.builder()
-            .title(TITLE)
-            .columnNames(Arrays.asList(COLUMN_NAME))
-            .columns(Arrays.asList(Arrays.asList((String) null)))
+            .title(TABLE_TITLE)
+            .listItemType(ListItemType.TABLE)
+            .tableHeads(List.of(TableHeadModel.builder()
+                .columnIndex(0)
+                .content(COLUMN_NAME)
+                .build()))
+            .rows(List.of(TableRowModel.builder()
+                .rowIndex(0)
+                .columns(List.of(TableColumnModel.builder()
+                    .columnIndex(0)
+                    .columnType(ColumnType.TEXT)
+                    .data(null)
+                    .build()))
+                .build()))
             .build();
         Response create_nullColumnValueResponse = NotebookActions.getCreateTableResponse(accessTokenId, create_nullColumnValueRequest);
-        verifyInvalidParam(create_nullColumnValueResponse, "columnValue", "must not be null");
+        verifyInvalidParam(create_nullColumnValueResponse, "textValue", "must not be null");
+
+        //Create - Null columnType
+        //TODO
+
+        //Create - Null columnIndex
+        //TODO
 
         //Create
         CreateTableRequest createRequest = CreateTableRequest.builder()
-            .title(TITLE)
-            .columnNames(Arrays.asList(COLUMN_NAME))
-            .columns(Arrays.asList(Arrays.asList(COLUMN_VALUE)))
+            .title(TABLE_TITLE)
+            .listItemType(ListItemType.TABLE)
+            .tableHeads(List.of(TableHeadModel.builder()
+                .columnIndex(0)
+                .content(COLUMN_NAME)
+                .build()))
+            .rows(List.of(TableRowModel.builder()
+                .rowIndex(0)
+                .columns(List.of(TableColumnModel.builder()
+                    .columnIndex(0)
+                    .columnType(ColumnType.TEXT)
+                    .data(COLUMN_VALUE)
+                    .build()))
+                .build()))
             .build();
-        UUID listItemId = NotebookActions.createTable(accessTokenId, createRequest);
+        NotebookActions.createTable(accessTokenId, createRequest);
+        UUID listItemId = NotebookActions.getChildrenOfCategory(accessTokenId, null)
+            .getChildren()
+            .stream()
+            .filter(notebookView -> notebookView.getTitle().equals(TABLE_TITLE))
+            .map(NotebookView::getId)
+            .findAny()
+            .orElseThrow(() -> new RuntimeException("Table was not created."));
         TableResponse tableResponse = NotebookActions.getTable(accessTokenId, listItemId);
-        assertThat(tableResponse.getTitle()).isEqualTo(TITLE);
+        assertThat(tableResponse.getTitle()).isEqualTo(TABLE_TITLE);
         assertThat(tableResponse.getTableHeads()).hasSize(1);
         assertThat(tableResponse.getTableHeads().get(0).getColumnIndex()).isEqualTo(0);
         assertThat(tableResponse.getTableHeads().get(0).getContent()).isEqualTo(COLUMN_NAME);
-        assertThat(tableResponse.getTableColumns()).hasSize(1);
-        assertThat(tableResponse.getTableColumns().get(0).getColumnIndex()).isEqualTo(0);
-        assertThat(tableResponse.getTableColumns().get(0).getRowIndex()).isEqualTo(0);
-        assertThat(tableResponse.getTableColumns().get(0).getContent()).isEqualTo(COLUMN_VALUE);
+        assertThat(tableResponse.getRows()).hasSize(1);
+        assertThat(tableResponse.getRows().get(0).getRowIndex()).isEqualTo(0);
+        assertThat(tableResponse.getRows().get(0).getColumns()).hasSize(1);
+        assertThat(tableResponse.getRows().get(0).getColumns().get(0).getColumnIndex()).isEqualTo(0);
+        assertThat(tableResponse.getRows().get(0).getColumns().get(0).getData()).isEqualTo(COLUMN_VALUE);
 
         //Get - ListItem not found
         Response get_listItemNotFoundResponse = NotebookActions.getTableResponse(accessTokenId, UUID.randomUUID());
@@ -122,21 +253,25 @@ public class TableCrudTest extends BackEndTest {
         EditTableRequest edit_blankTitleRequest = EditTableRequest.builder()
             .title(" ")
             .tableHeads(
-                List.of(
-                    EditTableHeadRequest.builder()
-                        .tableHeadId(tableResponse.getTableHeads().get(0).getTableHeadId())
-                        .columnIndex(0)
-                        .columnName(NEW_COLUMN_NAME)
-                        .build()
-                )
-            )
-            .columns(List.of(
-                EditTableJoinRequest.builder()
-                    .tableJoinId(tableResponse.getTableColumns().get(0).getTableJoinId())
-                    .rowIndex(0)
+                List.of(TableHeadModel.builder()
+                    .tableHeadId(tableResponse.getTableHeads().get(0).getTableHeadId())
                     .columnIndex(0)
-                    .content(NEW_COLUMN_VALUE)
+                    .content(NEW_COLUMN_NAME)
+                    .type(ItemType.EXISTING)
                     .build()
+                ))
+            .rows(List.of(TableRowModel.builder()
+                .rowId(tableResponse.getRows().get(0).getRowId())
+                .rowIndex(0)
+                .itemType(ItemType.EXISTING)
+                .columns(List.of(TableColumnModel.builder()
+                    .columnId(tableResponse.getRows().get(0).getColumns().get(0).getColumnId())
+                    .columnIndex(0)
+                    .columnType(ColumnType.TEXT)
+                    .itemType(ItemType.EXISTING)
+                    .data(NEW_COLUMN_NAME)
+                    .build()))
+                .build()
             ))
             .build();
         Response edit_blankTitleResponse = NotebookActions.getEditTableResponse(accessTokenId, listItemId, edit_blankTitleRequest);
@@ -146,221 +281,254 @@ public class TableCrudTest extends BackEndTest {
         EditTableRequest edit_blankColumnNameRequest = EditTableRequest.builder()
             .title(NEW_TITLE)
             .tableHeads(
-                List.of(
-                    EditTableHeadRequest.builder()
-                        .tableHeadId(tableResponse.getTableHeads().get(0).getTableHeadId())
-                        .columnIndex(0)
-                        .columnName(" ")
-                        .build()
-                )
-            )
-            .columns(List.of(
-                EditTableJoinRequest.builder()
-                    .tableJoinId(tableResponse.getTableColumns().get(0).getTableJoinId())
-                    .rowIndex(0)
+                List.of(TableHeadModel.builder()
+                    .tableHeadId(tableResponse.getTableHeads().get(0).getTableHeadId())
                     .columnIndex(0)
-                    .content(NEW_COLUMN_VALUE)
+                    .content(" ")
+                    .type(ItemType.EXISTING)
                     .build()
+                ))
+            .rows(List.of(TableRowModel.builder()
+                .rowId(tableResponse.getRows().get(0).getRowId())
+                .rowIndex(0)
+                .itemType(ItemType.EXISTING)
+                .columns(List.of(TableColumnModel.builder()
+                    .columnId(tableResponse.getRows().get(0).getColumns().get(0).getColumnId())
+                    .columnIndex(0)
+                    .columnType(ColumnType.TEXT)
+                    .itemType(ItemType.EXISTING)
+                    .data(NEW_COLUMN_NAME)
+                    .build()))
+                .build()
             ))
             .build();
         Response edit_blankColumnNameResponse = NotebookActions.getEditTableResponse(accessTokenId, listItemId, edit_blankColumnNameRequest);
-        verifyInvalidParam(edit_blankColumnNameResponse, "columnName", "must not be null or blank");
+        verifyInvalidParam(edit_blankColumnNameResponse, "tableHead.content", "must not be null or blank");
 
-        /*
         //Edit - Different column amount
         EditTableRequest edit_differentColumnAmountRequest = EditTableRequest.builder()
             .title(NEW_TITLE)
             .tableHeads(
-                List.of(
-                    EditTableHeadRequest.builder()
-                        .tableHeadId(tableResponse.getTableHeads().get(0).getTableHeadId())
-                        .columnIndex(0)
-                        .columnName(NEW_COLUMN_NAME)
-                        .build()
-                )
-            )
-            .columns(List.of(
-                EditTableJoinRequest.builder()
-                    .tableJoinId(tableResponse.getTableColumns().get(0).getTableJoinId())
-                    .rowIndex(0)
+                List.of(TableHeadModel.builder()
+                    .tableHeadId(tableResponse.getTableHeads().get(0).getTableHeadId())
                     .columnIndex(0)
-                    .content(NEW_COLUMN_VALUE)
-                    .build(),
-                EditTableJoinRequest.builder()
-                    .rowIndex(0)
-                    .columnIndex(1)
-                    .content(NEW_COLUMN_VALUE)
+                    .content(NEW_COLUMN_NAME)
+                    .type(ItemType.EXISTING)
                     .build()
+                ))
+            .rows(List.of(TableRowModel.builder()
+                .rowId(tableResponse.getRows().get(0).getRowId())
+                .rowIndex(0)
+                .itemType(ItemType.EXISTING)
+                .columns(List.of(
+                    TableColumnModel.builder()
+                        .columnId(tableResponse.getRows().get(0).getColumns().get(0).getColumnId())
+                        .columnIndex(0)
+                        .columnType(ColumnType.TEXT)
+                        .itemType(ItemType.EXISTING)
+                        .data(NEW_COLUMN_NAME)
+                        .build(),
+                    TableColumnModel.builder()
+                        .columnIndex(0)
+                        .columnType(ColumnType.TEXT)
+                        .itemType(ItemType.NEW)
+                        .data("asd")
+                        .build()
+                ))
+                .build()
             ))
             .build();
-        Response edit_differentColumnAmountResponse = NotebookActions.getEditTableResponse( accessTokenId, listItemId, edit_differentColumnAmountRequest);
-        verifyInvalidParam(edit_differentColumnAmountResponse, "columns", "amount different");
-*/
+        Response edit_differentColumnAmountResponse = NotebookActions.getEditTableResponse(accessTokenId, listItemId, edit_differentColumnAmountRequest);
+        verifyInvalidParam(edit_differentColumnAmountResponse, "row.columns", "item count mismatch");
+
         //Edit - Null column value
         EditTableRequest edit_nullColumnValueRequest = EditTableRequest.builder()
             .title(NEW_TITLE)
             .tableHeads(
-                List.of(
-                    EditTableHeadRequest.builder()
-                        .tableHeadId(tableResponse.getTableHeads().get(0).getTableHeadId())
-                        .columnIndex(0)
-                        .columnName(NEW_COLUMN_NAME)
-                        .build()
-                )
-            )
-            .columns(List.of(
-                EditTableJoinRequest.builder()
-                    .tableJoinId(tableResponse.getTableColumns().get(0).getTableJoinId())
-                    .rowIndex(0)
+                List.of(TableHeadModel.builder()
+                    .tableHeadId(tableResponse.getTableHeads().get(0).getTableHeadId())
                     .columnIndex(0)
-                    .content(null)
+                    .content(NEW_COLUMN_NAME)
+                    .type(ItemType.EXISTING)
                     .build()
+                ))
+            .rows(List.of(TableRowModel.builder()
+                .rowId(tableResponse.getRows().get(0).getRowId())
+                .rowIndex(0)
+                .itemType(ItemType.EXISTING)
+                .columns(List.of(TableColumnModel.builder()
+                    .columnId(tableResponse.getRows().get(0).getColumns().get(0).getColumnId())
+                    .columnIndex(0)
+                    .columnType(ColumnType.TEXT)
+                    .itemType(ItemType.EXISTING)
+                    .data(null)
+                    .build()))
+                .build()
             ))
             .build();
         Response edit_nullColumnValueResponse = NotebookActions.getEditTableResponse(accessTokenId, listItemId, edit_nullColumnValueRequest);
-        verifyInvalidParam(edit_nullColumnValueResponse, "columnValue", "must not be null");
+        verifyInvalidParam(edit_nullColumnValueResponse, "textValue", "must not be null");
 
         //Edit - ColumnHead not found
         EditTableRequest edit_columnHeadNotFoundRequest = EditTableRequest.builder()
             .title(NEW_TITLE)
             .tableHeads(
-                List.of(
-                    EditTableHeadRequest.builder()
-                        .tableHeadId(UUID.randomUUID())
-                        .columnIndex(0)
-                        .columnName(NEW_COLUMN_NAME)
-                        .build()
-                )
-            )
-            .columns(List.of(
-                EditTableJoinRequest.builder()
-                    .tableJoinId(tableResponse.getTableColumns().get(0).getTableJoinId())
-                    .rowIndex(0)
+                List.of(TableHeadModel.builder()
+                    .tableHeadId(UUID.randomUUID())
                     .columnIndex(0)
-                    .content(NEW_COLUMN_VALUE)
+                    .content(NEW_COLUMN_NAME)
+                    .type(ItemType.EXISTING)
                     .build()
+                ))
+            .rows(List.of(TableRowModel.builder()
+                .rowId(tableResponse.getRows().get(0).getRowId())
+                .rowIndex(0)
+                .itemType(ItemType.EXISTING)
+                .columns(List.of(TableColumnModel.builder()
+                    .columnId(tableResponse.getRows().get(0).getColumns().get(0).getColumnId())
+                    .columnIndex(0)
+                    .columnType(ColumnType.TEXT)
+                    .itemType(ItemType.EXISTING)
+                    .data(NEW_COLUMN_NAME)
+                    .build()))
+                .build()
             ))
             .build();
         Response edit_columnHeadNotFoundResponse = NotebookActions.getEditTableResponse(accessTokenId, listItemId, edit_columnHeadNotFoundRequest);
-        verifyListItemNotFound(edit_columnHeadNotFoundResponse);
+        ResponseValidator.verifyErrorResponse(edit_columnHeadNotFoundResponse, 404, ErrorCode.DATA_NOT_FOUND);
 
         //Edit - TableJoin not found
         EditTableRequest edit_tableJoinNotFoundRequest = EditTableRequest.builder()
             .title(NEW_TITLE)
             .tableHeads(
-                List.of(
-                    EditTableHeadRequest.builder()
-                        .tableHeadId(tableResponse.getTableHeads().get(0).getTableHeadId())
-                        .columnIndex(0)
-                        .columnName(NEW_COLUMN_NAME)
-                        .build()
-                )
-            )
-            .columns(List.of(
-                EditTableJoinRequest.builder()
-                    .tableJoinId(UUID.randomUUID())
-                    .rowIndex(0)
+                List.of(TableHeadModel.builder()
+                    .tableHeadId(tableResponse.getTableHeads().get(0).getTableHeadId())
                     .columnIndex(0)
-                    .content(NEW_COLUMN_VALUE)
+                    .content(NEW_COLUMN_NAME)
+                    .type(ItemType.EXISTING)
                     .build()
+                ))
+            .rows(List.of(TableRowModel.builder()
+                .rowId(tableResponse.getRows().get(0).getRowId())
+                .rowIndex(0)
+                .itemType(ItemType.EXISTING)
+                .columns(List.of(TableColumnModel.builder()
+                    .columnId(UUID.randomUUID())
+                    .columnIndex(0)
+                    .columnType(ColumnType.TEXT)
+                    .itemType(ItemType.EXISTING)
+                    .data(NEW_COLUMN_NAME)
+                    .build()))
+                .build()
             ))
             .build();
         Response edit_tableJoinNotFoundResponse = NotebookActions.getEditTableResponse(accessTokenId, listItemId, edit_tableJoinNotFoundRequest);
-        verifyListItemNotFound(edit_tableJoinNotFoundResponse);
+        ResponseValidator.verifyErrorResponse(edit_tableJoinNotFoundResponse, 404, ErrorCode.DATA_NOT_FOUND);
 
         //Edit - ListItem not found
         EditTableRequest edit_listItemNotFoundRequest = EditTableRequest.builder()
             .title(NEW_TITLE)
             .tableHeads(
-                List.of(
-                    EditTableHeadRequest.builder()
-                        .tableHeadId(tableResponse.getTableHeads().get(0).getTableHeadId())
-                        .columnIndex(0)
-                        .columnName(NEW_COLUMN_NAME)
-                        .build()
-                )
-            )
-            .columns(List.of(
-                EditTableJoinRequest.builder()
-                    .tableJoinId(tableResponse.getTableColumns().get(0).getTableJoinId())
-                    .rowIndex(0)
+                List.of(TableHeadModel.builder()
+                    .tableHeadId(tableResponse.getTableHeads().get(0).getTableHeadId())
                     .columnIndex(0)
-                    .content(NEW_COLUMN_VALUE)
+                    .content(NEW_COLUMN_NAME)
+                    .type(ItemType.EXISTING)
                     .build()
+                ))
+            .rows(List.of(TableRowModel.builder()
+                .rowId(tableResponse.getRows().get(0).getRowId())
+                .rowIndex(0)
+                .itemType(ItemType.EXISTING)
+                .columns(List.of(TableColumnModel.builder()
+                    .columnId(tableResponse.getRows().get(0).getColumns().get(0).getColumnId())
+                    .columnIndex(0)
+                    .columnType(ColumnType.TEXT)
+                    .itemType(ItemType.EXISTING)
+                    .data(NEW_COLUMN_NAME)
+                    .build()))
+                .build()
             ))
             .build();
         Response edit_listItemNotFoundResponse = NotebookActions.getEditTableResponse(accessTokenId, UUID.randomUUID(), edit_listItemNotFoundRequest);
-        verifyListItemNotFound(edit_listItemNotFoundResponse);
+        ResponseValidator.verifyInvalidParam(edit_listItemNotFoundResponse, "tableHead.tableHeadId", "points to different table");
 
         //Edit - Column deleted
         EditTableRequest edit_columnDeletedRequest = EditTableRequest.builder()
             .title(NEW_TITLE)
             .tableHeads(Collections.emptyList())
-            .columns(Collections.emptyList())
+            .rows(Collections.emptyList())
             .build();
         NotebookActions.editTable(accessTokenId, listItemId, edit_columnDeletedRequest);
         tableResponse = NotebookActions.getTable(accessTokenId, listItemId);
         assertThat(tableResponse.getTitle()).isEqualTo(NEW_TITLE);
         assertThat(tableResponse.getTableHeads()).isEmpty();
-        assertThat(tableResponse.getTableColumns()).isEmpty();
+        assertThat(tableResponse.getRows()).isEmpty();
 
         //Edit - Column added
         EditTableRequest edit_columnAddedRequest = EditTableRequest.builder()
-            .title(TITLE)
+            .title(TABLE_TITLE)
             .tableHeads(
-                List.of(
-                    EditTableHeadRequest.builder()
-                        .columnIndex(0)
-                        .columnName(COLUMN_NAME)
-                        .build()
-                )
-            )
-            .columns(List.of(
-                EditTableJoinRequest.builder()
-                    .rowIndex(0)
+                List.of(TableHeadModel.builder()
                     .columnIndex(0)
-                    .content(COLUMN_VALUE)
+                    .content(COLUMN_NAME)
+                    .type(ItemType.NEW)
                     .build()
+                ))
+            .rows(List.of(TableRowModel.builder()
+                .rowIndex(0)
+                .itemType(ItemType.NEW)
+                .columns(List.of(TableColumnModel.builder()
+                    .columnIndex(0)
+                    .columnType(ColumnType.TEXT)
+                    .itemType(ItemType.NEW)
+                    .data(COLUMN_VALUE)
+                    .build()))
+                .build()
             ))
             .build();
         NotebookActions.editTable(accessTokenId, listItemId, edit_columnAddedRequest);
         tableResponse = NotebookActions.getTable(accessTokenId, listItemId);
-        assertThat(tableResponse.getTitle()).isEqualTo(TITLE);
+        assertThat(tableResponse.getTitle()).isEqualTo(TABLE_TITLE);
         assertThat(tableResponse.getTableHeads()).hasSize(1);
         assertThat(tableResponse.getTableHeads().get(0).getColumnIndex()).isEqualTo(0);
         assertThat(tableResponse.getTableHeads().get(0).getContent()).isEqualTo(COLUMN_NAME);
-        assertThat(tableResponse.getTableColumns()).hasSize(1);
-        assertThat(tableResponse.getTableColumns().get(0).getColumnIndex()).isEqualTo(0);
-        assertThat(tableResponse.getTableColumns().get(0).getRowIndex()).isEqualTo(0);
-        assertThat(tableResponse.getTableColumns().get(0).getContent()).isEqualTo(COLUMN_VALUE);
+        assertThat(tableResponse.getRows()).hasSize(1);
+        assertThat(tableResponse.getRows().get(0).getRowIndex()).isEqualTo(0);
+        assertThat(tableResponse.getRows().get(0).getColumns()).hasSize(1);
+        assertThat(tableResponse.getRows().get(0).getColumns().get(0).getColumnIndex()).isEqualTo(0);
+        assertThat(tableResponse.getRows().get(0).getColumns().get(0).getData()).isEqualTo(COLUMN_VALUE);
 
         //Edit - Column modified
         EditTableRequest editTableRequest = EditTableRequest.builder()
             .title(NEW_TITLE)
             .tableHeads(
-                List.of(
-                    EditTableHeadRequest.builder()
-                        .tableHeadId(tableResponse.getTableHeads().get(0).getTableHeadId())
-                        .columnIndex(0)
-                        .columnName(NEW_COLUMN_NAME)
-                        .build()
-                )
-            )
-            .columns(List.of(
-                EditTableJoinRequest.builder()
-                    .tableJoinId(tableResponse.getTableColumns().get(0).getTableJoinId())
-                    .rowIndex(0)
+                List.of(TableHeadModel.builder()
+                    .tableHeadId(tableResponse.getTableHeads().get(0).getTableHeadId())
                     .columnIndex(0)
-                    .content(NEW_COLUMN_VALUE)
+                    .content(NEW_COLUMN_NAME)
+                    .type(ItemType.EXISTING)
                     .build()
+                ))
+            .rows(List.of(TableRowModel.builder()
+                .rowId(tableResponse.getRows().get(0).getRowId())
+                .rowIndex(0)
+                .itemType(ItemType.EXISTING)
+                .columns(List.of(TableColumnModel.builder()
+                    .columnId(tableResponse.getRows().get(0).getColumns().get(0).getColumnId())
+                    .columnIndex(0)
+                    .columnType(ColumnType.TEXT)
+                    .itemType(ItemType.EXISTING)
+                    .data(NEW_COLUMN_VALUE)
+                    .build()))
+                .build()
             ))
             .build();
         NotebookActions.editTable(accessTokenId, listItemId, editTableRequest);
         tableResponse = NotebookActions.getTable(accessTokenId, listItemId);
         assertThat(tableResponse.getTitle()).isEqualTo(NEW_TITLE);
         assertThat(tableResponse.getTableHeads().get(0).getContent()).isEqualTo(NEW_COLUMN_NAME);
-        assertThat(tableResponse.getTableColumns().get(0).getContent()).isEqualTo(NEW_COLUMN_VALUE);
-
+        assertThat(tableResponse.getRows().get(0).getColumns().get(0).getData()).isEqualTo(NEW_COLUMN_VALUE);
 
         NotebookActions.deleteListItem(accessTokenId, listItemId);
 
